# grpc-bench

./: Cargo.toml  README-CH.md  README.md
cpp-bench/: Makefile  echo_client.cc  echo_server.cc  util.h
cpp-bench/proto/: test.grpc.pb.cc  test.grpc.pb.h  test.pb.cc  test.pb.h  test.proto
src/: lib.rs  util.rs
src/client/: echo.rs  mod.rs
src/proto/: mod.rs  test.proto  test.rs  test_grpc.rs
src/server/: echo.rs  mod.rs
