[package]
name = "grpc-bench"
version = "0.1.0"
authors = ["TXXT <hunterlxt@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = "0.5.0-alpha.4"
grpcio-sys = "0.5.0-alpha.4"
protobuf = "2.0"
clap = "2.33"
rand = "0.7"
futures = "0.1"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"