[package]
name = "grpc-bench"
version = "0.1.0"
authors = ["TXXT <hunterlxt@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = { path = "../grpc-rs" }
grpcio-sys = { path = "../grpc-rs/grpc-sys" }
protobuf = "2.0"
clap = "2.33"
rand = "0.7"
futures = "0.1"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"